// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.vue renders props.msg when passed 1`] = `
VueWrapper {
  "__app": Object {
    "_component": Object {
      "__emits": null,
      "__props": Array [
        Object {},
        Array [],
      ],
      "name": "VTU_ROOT",
      "render": [Function],
    },
    "_container": <div
      data-v-app=""
    >
      <section
        class="todoapp"
        id="app"
      >
        <header
          class="header"
        >
          <h1>
            todos
          </h1>
          <input
            autocomplete="off"
            autofocus=""
            class="new-todo"
            placeholder="What needs to be done?"
          />
        </header>
        <section
          class="main"
          style="display: none;"
        >
          <input
            class="toggle-all"
            id="toggle-all"
            type="checkbox"
          />
          <label
            for="toggle-all"
          >
            Mark all as complete
          </label>
          <ul
            class="todo-list"
          >
            
            
          </ul>
        </section>
        <footer
          class="footer"
          style="display: none;"
        >
          <span
            class="todo-count"
          >
            <strong>
              0
            </strong>
             item left 
          </span>
          <ul
            class="filters"
          >
            <li>
              <a
                href="#/all"
              >
                All
              </a>
            </li>
            <li>
              <a
                href="#/active"
              >
                Active
              </a>
            </li>
            <li>
              <a
                href="#/completed"
              >
                Completed
              </a>
            </li>
          </ul>
          <button
            class="clear-completed"
            style="display: none;"
          >
             Clear completed 
          </button>
        </footer>
      </section>
    </div>,
    "_context": Object {
      "app": [Circular],
      "components": Object {
        "transition": Object {
          "name": "transition",
          "props": undefined,
          "render": [Function],
        },
        "transition-group": Object {
          "name": "transition-group",
          "props": undefined,
          "render": [Function],
        },
      },
      "config": Object {
        "errorHandler": undefined,
        "globalProperties": Object {},
        "isCustomElement": [Function],
        "isNativeTag": [Function],
        "optionMergeStrategies": Object {},
        "performance": false,
        "warnHandler": undefined,
      },
      "directives": Object {},
      "mixins": Array [
        Object {
          "__emits": null,
          "__props": Array [],
          "beforeCreate": [Function],
        },
      ],
      "provides": Object {},
      "reload": [Function],
    },
    "_props": null,
    "_uid": 0,
    "component": [Function],
    "config": Object {
      "errorHandler": undefined,
      "globalProperties": Object {},
      "isCustomElement": [Function],
      "isNativeTag": [Function],
      "optionMergeStrategies": Object {},
      "performance": false,
      "warnHandler": undefined,
    },
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.0.10",
  },
  "__setProps": [Function],
  "componentVM": Object {
    "addTodo": [Function],
    "allDown": true,
    "cancelEdit": [Function],
    "count": 0,
    "doneEdit": [Function],
    "editTodo": [Function],
    "editingTodo": null,
    "filteredTodos": Array [],
    "hasOwnProperty": [Function],
    "input": "",
    "remainingCount": 0,
    "remove": [Function],
    "removeCompleted": [Function],
    "todos": Array [],
  },
  "rootVM": Object {},
  "wrapperElement": <section
    class="todoapp"
    id="app"
  >
    <header
      class="header"
    >
      <h1>
        todos
      </h1>
      <input
        autocomplete="off"
        autofocus=""
        class="new-todo"
        placeholder="What needs to be done?"
      />
    </header>
    <section
      class="main"
      style="display: none;"
    >
      <input
        class="toggle-all"
        id="toggle-all"
        type="checkbox"
      />
      <label
        for="toggle-all"
      >
        Mark all as complete
      </label>
      <ul
        class="todo-list"
      >
        
        
      </ul>
    </section>
    <footer
      class="footer"
      style="display: none;"
    >
      <span
        class="todo-count"
      >
        <strong>
          0
        </strong>
         item left 
      </span>
      <ul
        class="filters"
      >
        <li>
          <a
            href="#/all"
          >
            All
          </a>
        </li>
        <li>
          <a
            href="#/active"
          >
            Active
          </a>
        </li>
        <li>
          <a
            href="#/completed"
          >
            Completed
          </a>
        </li>
      </ul>
      <button
        class="clear-completed"
        style="display: none;"
      >
         Clear completed 
      </button>
    </footer>
  </section>,
}
`;

exports[`App.vue 页面是否渲染 1`] = `
VueWrapper {
  "__app": Object {
    "_component": Object {
      "__emits": null,
      "__props": Array [
        Object {},
        Array [],
      ],
      "name": "VTU_ROOT",
      "render": [Function],
    },
    "_container": <div
      data-v-app=""
    >
      <section
        class="todoapp"
        id="app"
      >
        <header
          class="header"
        >
          <h1>
            todos
          </h1>
          <input
            autocomplete="off"
            autofocus=""
            class="new-todo"
            id="inputs"
            placeholder="What needs to be done?"
          />
        </header>
        <section
          class="main"
          style="display: none;"
        >
          <input
            class="toggle-all"
            id="toggle-all"
            type="checkbox"
          />
          <label
            for="toggle-all"
          >
            Mark all as complete
          </label>
          <ul
            class="todo-list"
          >
            
            
          </ul>
        </section>
        <footer
          class="footer"
          style="display: none;"
        >
          <span
            class="todo-count"
          >
            <strong>
              0
            </strong>
             item left 
          </span>
          <ul
            class="filters"
          >
            <li>
              <a
                href="#/all"
              >
                All
              </a>
            </li>
            <li>
              <a
                href="#/active"
              >
                Active
              </a>
            </li>
            <li>
              <a
                href="#/completed"
              >
                Completed
              </a>
            </li>
          </ul>
          <button
            class="clear-completed"
            style="display: none;"
          >
             Clear completed 
          </button>
        </footer>
      </section>
    </div>,
    "_context": Object {
      "app": [Circular],
      "components": Object {
        "transition": Object {
          "name": "transition",
          "props": undefined,
          "render": [Function],
        },
        "transition-group": Object {
          "name": "transition-group",
          "props": undefined,
          "render": [Function],
        },
      },
      "config": Object {
        "errorHandler": undefined,
        "globalProperties": Object {},
        "isCustomElement": [Function],
        "isNativeTag": [Function],
        "optionMergeStrategies": Object {},
        "performance": false,
        "warnHandler": undefined,
      },
      "directives": Object {},
      "mixins": Array [
        Object {
          "__emits": null,
          "__props": Array [],
          "beforeCreate": [Function],
        },
      ],
      "provides": Object {},
      "reload": [Function],
    },
    "_props": null,
    "_uid": 0,
    "component": [Function],
    "config": Object {
      "errorHandler": undefined,
      "globalProperties": Object {},
      "isCustomElement": [Function],
      "isNativeTag": [Function],
      "optionMergeStrategies": Object {},
      "performance": false,
      "warnHandler": undefined,
    },
    "directive": [Function],
    "mixin": [Function],
    "mount": [Function],
    "provide": [Function],
    "unmount": [Function],
    "use": [Function],
    "version": "3.0.10",
  },
  "__setProps": [Function],
  "componentVM": Object {
    "addTodo": [Function],
    "allDown": true,
    "cancelEdit": [Function],
    "count": 0,
    "doneEdit": [Function],
    "editTodo": [Function],
    "editingTodo": null,
    "filteredTodos": Array [],
    "hasOwnProperty": [Function],
    "input": "",
    "remainingCount": 0,
    "remove": [Function],
    "removeCompleted": [Function],
    "todos": Array [],
  },
  "rootVM": Object {},
  "wrapperElement": <section
    class="todoapp"
    id="app"
  >
    <header
      class="header"
    >
      <h1>
        todos
      </h1>
      <input
        autocomplete="off"
        autofocus=""
        class="new-todo"
        id="inputs"
        placeholder="What needs to be done?"
      />
    </header>
    <section
      class="main"
      style="display: none;"
    >
      <input
        class="toggle-all"
        id="toggle-all"
        type="checkbox"
      />
      <label
        for="toggle-all"
      >
        Mark all as complete
      </label>
      <ul
        class="todo-list"
      >
        
        
      </ul>
    </section>
    <footer
      class="footer"
      style="display: none;"
    >
      <span
        class="todo-count"
      >
        <strong>
          0
        </strong>
         item left 
      </span>
      <ul
        class="filters"
      >
        <li>
          <a
            href="#/all"
          >
            All
          </a>
        </li>
        <li>
          <a
            href="#/active"
          >
            Active
          </a>
        </li>
        <li>
          <a
            href="#/completed"
          >
            Completed
          </a>
        </li>
      </ul>
      <button
        class="clear-completed"
        style="display: none;"
      >
         Clear completed 
      </button>
    </footer>
  </section>,
}
`;
